added pagination support for backend - added pagination support for articles - fixed the scroll issue - fixed the styling of articles - added datetime, is_present and is_empty libraries

--- a/frontend/src/components/EducationHealthSection.css
+++ b/frontend/src/components/EducationHealthSection.css
@@ -57,6 +57,7 @@
 
 /* Articles List */
 .articles-list {
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -64,6 +65,7 @@
 
 /* Article Item */
 .article-item {
+  height: 100%;
   position: relative;
   padding: 25px;
   border-radius: 8px;
