Completely redesign the darkmode with amoled black edition

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,7 +70,8 @@ body {
 
 /* Dark Theme */
 .App.dark {
-  background-color: #0f0f0f;
+  background-color: #000000;
+  /* background-color: #0f0f0f; */
   color: #ffffff;
 }
 
