--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -5,7 +5,8 @@
 }
 
 .header-section.dark {
-  background-color: #0f0f0f;
+  background-color: rgb(0, 0, 0);
+  /* background-color: #0f0f0f; */
 }
 
 .header-section.light {
