--- a/frontend/src/components/NationalInternationalSection.css
+++ b/frontend/src/components/NationalInternationalSection.css
@@ -5,7 +5,8 @@
 }
 
 .nat-int-section.dark {
-  background-color: #0f0f0f;
+  background-color: #000000;
+  /* background-color: #0f0f0f; */
 }
 
 .nat-int-section.light {
